kubernetes/apps/network/external-services/proxmox-ve/backendtrafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: &app proxmox-ve
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: *app
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: Cookie
      cookie:
        name: proxmox-ve-session
        ttl: 3600s
        attributes:
          SameSite: Strict
